--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,8 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallete_normal"
             android:tag="@color/black"
-            android:background="@color/black" />
+            android:background="@color/black"
+            android:onClick="colorSelected" />
 
         <ImageButton
             android:layout_width="25dp"
@@ -55,7 +56,8 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallete_normal"
             android:tag="@color/caucasian"
-            android:background="@color/caucasian" />
+            android:background="@color/caucasian"
+            android:onClick="colorSelected" />
 
         <ImageButton
             android:layout_width="25dp"
@@ -63,7 +65,8 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallete_normal"
             android:tag="@color/red"
-            android:background="@color/red" />
+            android:background="@color/red"
+            android:onClick="colorSelected" />
 
         <ImageButton
             android:layout_width="25dp"
@@ -71,7 +74,8 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallete_normal"
             android:tag="@color/green"
-            android:background="@color/green" />
+            android:background="@color/green"
+            android:onClick="colorSelected" />
 
         <ImageButton
             android:layout_width="25dp"
@@ -79,7 +83,8 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallete_normal"
             android:tag="@color/blue"
-            android:background="@color/blue" />
+            android:background="@color/blue"
+            android:onClick="colorSelected" />
 
         <ImageButton
             android:layout_width="25dp"
@@ -87,7 +92,8 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallete_normal"
             android:tag="@color/yellow"
-            android:background="@color/yellow" />
+            android:background="@color/yellow"
+            android:onClick="colorSelected" />
 
         <ImageButton
             android:layout_width="25dp"
@@ -95,7 +101,17 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallete_normal"
             android:tag="@color/random"
-            android:background="@color/random" />
+            android:background="@color/random"
+            android:onClick="colorSelected" />
+
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:src="@drawable/pallete_normal"
+            android:tag="@color/white"
+            android:background="@color/white"
+            android:onClick="colorSelected" />
 
     </LinearLayout>
 
